# m5-turma13-demos

sprint1/demo1/: script.js
sprint2/demo1/: main.py
sprint2/demo2/: main.py
sprint2/demo2_1/: main.py
sprint2/demo3/: main.py
sprint2/demo3_1/: requirements.txt
sprint2/demo4/: README.md  requirements.txt
sprint2/demo5/: README.md
sprint3/demo1/: shell-do-django.txt
sprint3/demo2/: shell-do-django.txt
sprint3/demo3/: shell-do-django.txt
sprint3/demo4/: pytest.ini  requirements.txt
sprint3/demo5/: manage.py
sprint4/demo1/: requirements.txt
sprint4/demo3/: shell-do-python.txt
sprint4/demo5/: requirements.txt  shell-do-python.py
sprint6/demo2/: requirements.txt
sprint6/demo3/: requirements.txt
sprint6/demo4/: requirements.txt
sprint7-8/demo1/: .env.example  .gitignore
sprint7-8/demo2/: .env.example  (+2 more)
sprint7-8/demo5/: app2_example.py  pyproject.toml
sprint7-8/demo5/.github/workflows/: python-app.yml
sprint7-8/demo5/app/: __init__.py
sprint7-8/demo5/app/controllers/: pet_controller.py
sprint7-8/demo5/app/exceptions/: __init__.py  custom_exc.py  exc_handlers.py
sprint7-8/demo5/app/repositories/pet_repos/: __init__.py  in_memory_repo.py  mongo_repo.py  pet_repo_interface.py
sprint7-8/demo5/app/routes/: __init__.py  pet_route.py
sprint7-8/demo5/app/tests/: conftest.py  test_pets.py
sprint7-8/demo6/: db.sqlite3  pyproject.toml
sprint7-8/demo6/_core/: settings.py  urls.py
sprint7-8/demo6/vehicles/: exceptions.py  filters.py  models.py  serializers.py  urls.py  views.py
sprint7-8/demo6/vehicles/migrations/: 0001_initial.py
(+211 files in other folders)
